documents and libraries, cont'd

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3970,7 +3970,7 @@ an EBNF grammar.
 \item OMS mappings 
 \item OMS networks
 %\item \red{queries}
-\item \DOL libraries (items in libraries are: definitions of OMS, OMS mappings, and OMS networks, as well as qualifications choosing\cbs (i) the logic,
+\item \DOL libraries (items in these are: definitions of OMS, OMS mappings, and OMS networks, as well as qualifications choosing\cbs (i) the logic,
 (2) the OMS language and/or (3) the serialization)\cbe
 \item identifiers
 \item annotations
@@ -4828,7 +4828,7 @@ translations, it is based on\cbs a\cbe heterogeneous logical environment.
 Hence, the most important need is to capture precisely what a
 heterogeneous logical environment is.
 
-The \DOL semantics itself gives a formal meaning to libraries, OMS
+The \DOL semantics itself gives a formal meaning to \DOL libraries, OMS
 networks, OMS, and OMS mappings. For each syntactic construct
 in the abstract syntax,
 a \emph{semantic domain} is given. It specifies the range of possible
@@ -5426,7 +5426,7 @@ the context of previous declarations, which is denoted
 $sem^{(\cI,\Sigma,\cM,\Delta)}_{(L,L',S)}(O)$.\cbe
 
 \ssclause{Semantics of Documents}
-\cbs In this section the semantics of \DOL constructs regarding libraries is defined.\cbe 
+\cbs In this section the semantics of \DOL constructs regarding docuemnts and \DOL libraries is defined.\cbe 
 
 \semdom{ sem(\syntax{Document}) = \Gamma}
 
@@ -9049,7 +9049,7 @@ covered where.
 
 %\CLnote[type=q-aut]{Should we have another column here that refers to the \emph{abstract} syntax?}%
 \begin{tabular}{|l|l|}\hline
-\multicolumn{2}{|c|}{\textbf{Top-level declarations in libraries}}\\\hline
+\multicolumn{2}{|c|}{\textbf{Top-level declarations in \DOL libraries}}\\\hline
 \textbf{Top-level declaration} & \textbf{Examples} \\\hline
 library \ldots & all examples\\\hline
 import IRI & Mereology\\\hline
@@ -9961,7 +9961,7 @@ Ontohub/Modelhub/Spechub is \cbs another implementation \cbe of
 mappings written in \DOL and \DOL-conforming languages.  It supports the
 same range of OMS languages and language translations as Hets (indeed,
 Hets is used for analyzing \DOL files). The novel aspect w.r.t.\ Hets
-is the provision of git-based repositories and IRIs for libraries,
+is the provision of git-based repositories and IRIs for \DOL libraries,
 OMS, symbols and mappings (see also Annex~\ref{a:loc/id}).
 
 Users of Ontohub/Modelhub/Spechub can upload, browse, search and annotate 
