be a bit more gentle about 'consistency'

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2148,7 +2148,7 @@ An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a weak definitional ex
 
 \cbs
    \termdefinition{consistency}{property of an \termref{OMS} expressing
-that it has a non-trivial set of \termref{logical consequences}, i.e.
+that it has a non-trivial set of \termref{logical consequences} in the sense that
 not every \termref{sentence} follows from the OMS.}
 \begin{note}
 The opposite is inconsistency.
