--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8817,8 +8817,8 @@ Refinement           = RefinementOMS | RefinementNetwork | RefinementComposition
 RefinementOMS = 'refinement-oms' , OMS ;
 RefinementNetwork = 'refinement-network' , Network ;
 RefinementComposition =  'refinement-composition' , Refinement , Refinement ;
-SimpleOMSRefinement = 'simple-oms-ref' , OMS , OMSRefinementMap , Refinement 
-                     | 'simple-network-ref' , Network , NetworkRefinementMap , Refinement ;
+SimpleOMSRefinement = 'simple-oms-ref' , OMS , OMSRefinementMap , Refinement ;
+SimpleNetworkRefinement = 'simple-network-ref' , Network , NetworkRefinementMap , Refinement ;
 OMSRefinementMap               = 'oms-refmap' , [ OMSLanguageTranslation ] , [ SymbolMap ] ;
 NetworkRefinementMap =  'network-refmap' , { NodeMap } ;
 NodeMap              = 'node-map', OMSName , OMSName , 
