adapted some nonterminals in abstract syntax

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8722,7 +8722,7 @@ OMSReference   = 'oms-reference' , OMSRef , [ ImportName ] ;
 ExtendingOMS         = ClosableOMS
                      | RelativeClosureOMS ;
 RelativeClosureOMS = 'relative-closure' , ClosureType , ClosableOMS ;
-OMS                  = ExtendingOMS | ClosureOMS | TranslationOMS | ReductionOMS | ExtractionOMS | ApproximationOMS | FilteringOMS | UnionOMS | ExtensionOMS | QualOMS | CombinationOMS | ApplicationOMS ;
+OMS                  = ExtendingOMS | ClosureOMS | TranslationOMS | ReductionOMS | ExtractionOMS | ApproximationOMS | FilteringOMS | UnionOMS | ExtensionOMS | QualifiedOMS | CombinationOMS | ApplicationOMS ;
 ClosureOMS = 'closure-symbols' , OMS , Closure ;
 TranslationOMS = 'translation' , OMS , Translation ;
 ReductionOMS = 'reduction' , OMS , Reduction ;
@@ -8762,6 +8762,7 @@ ConservativityStrength         = 'consequence-conservative' | 'model-conservativ
 InterfaceSignature   = SymbolList ;
 ImportName           = IRI ;
 ExtensionName        = IRI ;
+SubstName = IRI ;
 \end{lstlisting}
 %% \ednote{Alternatively, we could use one type of \syntax{InterfaceSignature}
 %% only, and instead use different constructors for \syntax{Extraction}
@@ -8892,6 +8893,7 @@ Double               = ($<$ a number $\in [0,1]$ $>$) ;
 IRI     =  FullIRI | CurieIRI ; (\footnote{Specified below in \cref{c:curies}.})
 CurieIRI = 'curie' , CURIE ;
 FullIRI = ($<$ as defined by the IRI production in \nisref{IETF/RFC 3987:2005} $>$) ;
+CURIE = String ;
 \end{lstlisting}
 
 
